<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".auth.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/pot"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="#E60023"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="310dp"
            android:layout_height="25dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="#D5D2D2"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"/>

        <TextView
            android:layout_width="310dp"
            android:layout_height="25dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="#D5D2D2"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/red"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/create_account_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="#007BFF"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:text="@string/sign_in_with_google"
            app:backgroundTint="#FF7777"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>